src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/WithCustomActions/ValidWithCustomActions.php
<?php

namespace Valid\WithCustomActions;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidWithCustomActions extends PluginBundle
{
}